# xla

./: .bazelrc  MODULE.bazel  MODULE.bazel.protobuf.downgrade  extension_for_cuda_configure.bzl  extension_for_cuda_json.bzl  extension_for_cuda_nccl_repo.bzl  extension_for_cuda_repo.bzl  extension_for_json_init_repository.bzl  extension_for_llvm_project.bzl  extension_for_llvm_raw.bzl  extension_for_nccl_configure.bzl  extension_for_nvidia_nvshmem.bzl  extension_for_nvshmem_configure.bzl  extension_for_nvshmem_redist_json.bzl  extension_for_python_configure.bzl  extension_for_redist_init_repository.bzl  extension_for_rocm_configure.bzl  extension_for_sycl_configure.bzl  extension_for_tensorrt_configure.bzl  extension_for_tf_http_archive.bzl  extension_for_tf_repositories.bzl  extension_for_whl_library.bzl  extension_for_workspace0.bzl  protobuf_29.3.patch  resolved_deps.py  tensorflow.bazelrc  workspace2.bzl
xla/mlir_hlo/tests/: BUILD
xla/tsl/: BUILD
xla/tsl/platform/default/: BUILD  build_config.bzl  proto_gen.bzl
